starting the move to angular

--- a/services/src/main/webapp/WEB-INF/web.xml
+++ b/services/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>RESTEasy JSAPI</servlet-name>
-		<url-pattern>/rest.js</url-pattern>
+		<url-pattern>/js/rest.js</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>/index.html</welcome-file>
