starting on client ideas

--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -24,7 +24,7 @@
 
     <artifactId>persistence</artifactId>
     <name>persistence</name>
-    <description>A starter Java EE 6 webapp project for use on JBoss AS 7 / EAP 6, generated from the jboss-javaee6-webapp archetype</description>
+    <description>Persistence for WARP</description>
 
     <url>http://jboss.org/jbossas</url>
     <licenses>
