--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,6 @@
   <modules>
     <module>persistence</module>
     <module>services</module>
+    <module>java-client</module>
   </modules>
 </project>
