--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -212,9 +212,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+				<configuration>				
+					<source>${java.compier.version}</source>
+					<target>${java.compier.source}</target>
 				</configuration>
 			</plugin>
         </plugins>
