--- a/services/pom.xml
+++ b/services/pom.xml
@@ -229,8 +229,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${java.compier.version}</source>
+					<target>${java.compier.source}</target>
 				</configuration>
 			</plugin>			
 		</plugins>
