--- a/services/pom.xml
+++ b/services/pom.xml
@@ -134,6 +134,14 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jaxrs</artifactId>
+			<version>3.0.10.Final</version>
+			<scope>provided</scope>
+		</dependency>
+
+
 		<!-- JSR-303 (Bean Validation) Implementation -->
 		<!-- Provides portable constraints such as @Email -->
 		<!-- Hibernate Validator is shipped in JBoss AS 7 -->
@@ -210,11 +218,11 @@
 				<configuration>
 					<!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
 					<failOnMissingWebXml>false</failOnMissingWebXml>
-					 <archive>
-            		<manifest>
-              			<addClasspath>true</addClasspath>
-            		</manifest>
-          </archive>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+						</manifest>
+					</archive>
 				</configuration>
 			</plugin>
 			<!-- The JBoss AS plugin deploys your war to a local JBoss AS container -->
@@ -232,7 +240,7 @@
 					<source>${java.compier.version}</source>
 					<target>${java.compier.source}</target>
 				</configuration>
-			</plugin>			
+			</plugin>
 		</plugins>
 	</build>
 
