--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   </modules>
   
   <properties>
-	<java.compier.version>1.8</java.compier.version>
+	<java.compiler.version>1.8</java.compiler.version>
   	<java.compiler.source>1.8</java.compiler.source>
   	
   	<maven.compiler.target>1.8</maven.compiler.target>
